[tool.poetry]
name = "python-kernel"
version = "0.1.0"
description = ""
authors = []

[[tool.poetry.source]]
name = "hex-internal-pypi-index"
url = "http://hex-internal-pypi-index.s3-website.us-east-2.amazonaws.com"
secondary = true

[tool.poetry.dependencies]
# Things listed here are the minimum required to run a hex kernel
python = ">=3.9,<3.10"
hex-packages = {path = "../../../python-kernel-packages", develop = true }


[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies.hex-packages]
path = "../../../python-kernel-packages"
develop = true
extras = [
  "hooks",
]


[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies.hex-packages]
path = "../../../python-kernel-packages"
develop = true
extras = [
  "common",
  "standard",
  "hooks",
  "python39"
]


[tool.poetry.dev-dependencies]
pytest = "^5.0.1"
snapshottest = "^0.6.0"
mypy = "^0.961"
types-requests = "^2.28.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
